--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,7 +1,8 @@
-* xref:01-setup.adoc[1. Setup]
-** xref:01-setup.adoc#prerequisite[Prerequisites]
-** xref:01-setup.adoc#minikube[Setup Minikube]
+* xref:01-setup.adoc[1. Backstage]
+** xref:01-setup.adoc#introduction[Introducing Backstage]
+** xref:01-setup.adoc#cluster_access[Cluster Access]
 
-* xref:02-deploy.adoc[2. Deploy Service]
-** xref:02-deploy.adoc#package[Build Service]
-** xref:02-deploy.adoc#deploy[Deploy Dervice]
+* xref:02-deploy.adoc[2. Golden Path Templates]
+** xref:02-deploy.adoc#golden_paths[Introducing GPTs]
+** xref:02-deploy.adoc#deploy[Deploy the Front End Application]
+** xref:02-deploy.adoc#view[View the resulting Components]
