--- a/documentation/modules/ROOT/pages/01-setup.adoc
+++ b/documentation/modules/ROOT/pages/01-setup.adoc
@@ -4,32 +4,35 @@ include::_attributes.adoc[]
 [#introduction]
 == Introducing Backstage
 
+Screenshot of slides
+link to slides
 
+== Prerequisites
+You will need a GitHub account in order to follow along with this workshop.  Account activation is free and requires fewer than five minutes to complete.  If you do not have a github account, or are not prepared to authenticate using your existing account, please sign up for a new account now at github.com
 
 [#cluster_access]
 == Cluster Access
 
-
-include::https://raw.githubusercontent.com/redhat-developer-demos/rhd-tutorial-common/master/prerequisites-kubernetes.adoc[]
-|===
-
-include::https://raw.githubusercontent.com/redhat-developer-demos/rhd-tutorial-common/master/optional-requisites.adoc[]
-|===
-
-[#minikube]
-== Setup Kubernetes
-
-:profile: my_profile
-
-include::https://raw.githubusercontent.com/redhat-developer-demos/rhd-tutorial-common/master/kubernetes-setup.adoc[]
-
-And then you are ready for start using Kubernetes:
+Check the onboarding doc for the latest cluster access urls and credentials
 
 image::kubelogo.png[]
 
-[#downloadtutorial]
-== Get tutorial sources
+Open the provided web console url in your browser to connect to the openshift web console. Choose the "Login with Github" option to proceed.
 
-:tutorial-url: https://github.com/redhat-developer-demos/rhd-tutorial-common.git
-:folder: my_folder
-include::https://raw.githubusercontent.com/redhat-developer-demos/rhd-tutorial-common/master/download-sources.adoc[]
+=== Create a Project
+
+Establish a project namespace for your work. 
+
+Select "create a new project" from the main openshift page.  The project name must be unique. Enter your github username in the first two inputs, then click "Create".
+
+Remember this project name!  You will need to enter it into several template inputs as your "Namespace" value.
+
+In the next section, we will learn how to populate this project namespace with fresh content from the Backstage catalog. But first, let's connect to Backstage.
+
+== Login to Backstage
+
+Click on the app launcher link in the header menu and select "Backstage" to connect to your backstage instance.  
+
+You will be prompted to authenticate.  Use the GitHub signin option.
+
+Now that we have a project namespace and a successful connection to backstage, we can start to create our workloads using the template system.
