publishing chapter layout changes

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,13 +1,28 @@
-* xref:01-setup.adoc[1. Backstage]
+* xref:01-setup.adoc[1. Backstage Basics]
 ** xref:01-setup.adoc#introduction[Introducing Backstage]
 ** xref:01-setup.adoc#cluster_access[Cluster Access]
+** xref:01-setup.adoc#project_access[Project Access]
+** xref:01-setup.adoc#backstage_access[Accessing Backstage]
 
 * xref:02-templates.adoc[2. Templates]
-** xref:02-templates.adoc#golden_paths[Introducing GPTs]
-** xref:02-templates.adoc#template_frontend[Deploy the Front End Template]
-** xref:02-templates.adoc#component[View the resulting Components]
-** xref:02-templates.adoc#template_gateway[Deploy the Gateway Template]
+** xref:02-templates.adoc#templates[Templates Introduction]
+** xref:02-templates.adoc#frontend[Deploy the Front End Template]
+** xref:02-templates.adoc#github[Front End Template Repo]
+** xref:02-templates.adoc#pipelines[Front End Build Pipeline]
+** xref:02-templates.adoc#gateway[Deploy the Gateway Template]
+** xref:02-templates.adoc#pipeline_triggers[Gateway Build Pipeline]
+** xref:02-templates.adoc#view_map[Access the resulting Workloads]
 
-* xref:03-plugins.adoc[3. Plugins]
+* xref:03-components.adoc[3. Components]
+** xref:03-components.adoc#software_catalog[View the resulting Components]
+** xref:03-components.adoc#plugins[About Plugins]
+** xref:03-components.adoc#backend[Deploy the Backend Template]
+** xref:03-components.adoc#backend_view[View the Backend Component]
 
-* xref:04-productivity.adoc[4. Productivity]
+* xref:04-development.adoc[4. Development]
+** xref:04-development.adoc#backend_pipeline[Run the Backend Pipeline]
+** xref:04-development.adoc#configuration[Service Binding]
+** xref:04-development.adoc#devspaces[DevSpaces]
+** xref:04-development.adoc#gateway_update[Update the Gateway Service]
+** xref:04-development.adoc#validate_changes[Validate your Changes]
+
