--- a/documentation/modules/ROOT/pages/03-components.adoc
+++ b/documentation/modules/ROOT/pages/03-components.adoc
@@ -1,10 +1,18 @@
-= Plugins
+= Components
 include::_attributes.adoc[]
 
-[#plugins_overview]
-== Introducing Plugins
-
+[#software_catalog]
+==View the components in the Software Catalog
 Return to backstage to check the status of the frontend and gateway components
+
+[#plugins]
+== About Plugins
+
+[#component_frontend]
+==View the FrontEnd Component
+
+[#component_gateway]
+==View the Gateway Component
 
 [#backend]
 == Deploying the Back End service
