--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -28,10 +28,31 @@ In this hands-on session, you'll use headline Red Hat products and technologies 
 [.tile]
 .xref:01-setup.adoc[Backstage]
 * xref:01-setup.adoc#introduction[Introducing Backstage]
-* xref:01-setup.adoc#cluster_access[Cluster Access]
+* xref:01-setup.adoc#cluster_access[OpenShift Cluster Access]
+* xref:01-setup.adoc#backstage_access[Accessing Backstage]
 
 [.tile]
-.xref:02-deploy.adoc[Golden Path Templates]
-* xref:02-deploy.adoc#golden_paths[Introducing GPTs]
-* xref:02-deploy.adoc#deploy[Deploy the Front End Application]
-* xref:02-deploy.adoc#view[View the resulting Components]
+.xref:02-templates.adoc[Templates]
+* xref:02-templates.adoc#templates[Introducing Templates]
+* xref:02-templates.adoc#frontend[Deploy the Front End Template]
+* xref:02-templates.adoc#github[View the resulting Repos]
+* xref:02-templates.adoc#pipelines[View the resulting Pipelines]
+* xref:02-templates.adoc#gateway[Deploy the Gateway Template]
+* xref:02-templates.adoc#pipeline_triggers[Trigger a Pipeline Run]
+
+[.tile]
+.xref:03-components.adoc[Components]
+* xref:03-components.adoc#software_catalog[Software Catalog]
+* xref:03-components.adoc#plugins[Plugins]
+* xref:03-components.adoc#component_frontend[View the FrontEnd Component]
+* xref:03-components.adoc#component_gateway[View the Gateway Component]
+* xref:03-components.adoc#backend[Deploy the Backend Template]
+* xref:03-components.adoc#backend_view[View the Backend Component]
+
+[.tile]
+.xref:04-development.adoc[Development]
+* xref:04-development.adoc#backend_pipeline[Run the Backend Pipeline]
+* xref:04-development.adoc#configuration[Service Binding]
+* xref:04-development.adoc#devspaces[Using DevSpaces]
+* xref:04-development.adoc#gateway_update[Update the Gateway Service]
+* xref:04-development.adoc#validate_changes[Validate your Changes]
