--- a/documentation/modules/ROOT/pages/04-development.adoc
+++ b/documentation/modules/ROOT/pages/04-development.adoc
@@ -66,14 +66,21 @@ Open the Gateway component in DevSpaces
 
 When prompted, make sure to “Grant” access to your team's GitHub Org when approving DevSpaces access via GH Auth!
 
-Open `/src/main/java/com/rhdevelopers/summit/workshop/poi/PoiResource.java`
+Open `/src/main/java/com/rhdevelopers/summit/workshop/SummitBackendResource.java`
 
-Add the following code near the bottom of the file:
+Uncomment the following code block near the bottom of the file:
 
 [.console-input]
-[source,bash,subs="+macros,+attributes"]
+[source,java,subs="+macros,+attributes"]
 ----
-Example code needed...
+    @POST
+    @Path("poi/add/point")
+    public Response loadCustomPoi(PoiRecord record) {
+        SUMMIT_POI_RECORDS.add(record);
+        return Response.created(
+            UriBuilder.fromPath("fake/poi/find/"+(SUMMIT_POI_RECORDS.size()-1)).build()
+        ).entity("inserted custom data point").build();
+    }
 ----
 
 Commit your change and sync
