--- a/documentation/modules/ROOT/pages/04-development.adoc
+++ b/documentation/modules/ROOT/pages/04-development.adoc
@@ -4,8 +4,12 @@ include::_attributes.adoc[]
 [#devspaces]
 == Introducing DevSpaces
 
+While there are many ways to craft a Golden Path for your development staff, the option to include OpenShift DevSpaces provides a quick path to success with zero laptop installation effort.
+
+In this chapter you will use DevSpaces to introduce a new API endpoint on your Gateway component.  The goal will be to add a custom datapoint to the "Red Hat Summit POI" dataset, which is stored in-memory within the Gateway component.
+
 [#gateway_update]
-== Update the Gateway Service
+== Use DevSpaces to update the Gateway
 Enter your <NAMESPACE> into the search input of the Software Catalog to find your Gateway component entity
 
 image::catalog_3.png[]
@@ -29,6 +33,10 @@ image::auth_6.png[]
 Make sure to click on *Grant* next to the "Summit23DevLab" GitHub Org before approving DevSpaces access
 
 image::auth_4.png[]
+
+Wait for your workspace to load.  This may take several minutes...
+
+image::devspaces_loading.png[]
 
 Select "Yes, I trust the authors"
 
