--- a/documentation/modules/ROOT/pages/01-setup.adoc
+++ b/documentation/modules/ROOT/pages/01-setup.adoc
@@ -24,7 +24,9 @@ Your user will have an OpenShift _Project_ for your exclusive use. Projects are 
 
 image::project_list.png[]
 
-Remember your Project name. You'll specify it in Template forms as your "Namespace" value as you deploy components.
+TIP: If you do not find a project, try reloading your browser to check again
+
+IMPORTANT: Remember your Project name. You'll specify it in Template forms as your "Namespace" value as you deploy components.
 
 Next, you'll connect to Backstage and discover the starting point for developing your application. Once that's done, Backstage _Templates_ will help you generate software components as you build a three-tier GeoSpatial mapping demo application.
 
